--- a/LightLog_FE/package.json
+++ b/LightLog_FE/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "expo": "~50.0.14",
-    "expo-dev-client": "^6.0.18",
-    "expo-modules-autolinking": "^3.0.22",
+    "expo-dev-client": "~3.3.12",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6"
