--- a/LightLog_FE/package.json
+++ b/LightLog_FE/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --port 3000",
+    "android": "expo start --android --port 3000",
+    "ios": "expo start --ios --port 3000",
+    "web": "expo start --web --port 3000"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "expo": "~50.0.14",
     "expo-dev-client": "~3.3.12",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@types/react": "~18.2.0",
