--- a/LightLog_FE/package.json
+++ b/LightLog_FE/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
-    "expo": "~50.0.14",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "expo": "^54.0.25",
     "expo-dev-client": "~3.3.12",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
