--- a/LightLog_FE/package.json
+++ b/LightLog_FE/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "axios": "^1.13.2",
     "expo": "^54.0.25",
     "expo-dev-client": "~3.3.12",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~18.2.0",
