--- a/LightLog_FE/package.json
+++ b/LightLog_FE/package.json
@@ -18,11 +18,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.19.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~18.2.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.3.3"
   },
   "private": true
