--- a/LightLog_FE/package.json
+++ b/LightLog_FE/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-calendars": "^1.1313.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.19.6",
     "zustand": "^5.0.8"
