--- a/LightLog_FE/package.json
+++ b/LightLog_FE/package.json
@@ -9,18 +9,19 @@
     "web": "expo start --web --port 3000"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "axios": "^1.13.2",
     "expo": "^54.0.25",
-    "expo-dev-client": "~3.3.12",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "expo-dev-client": "~6.0.18",
+    "expo-notifications": "~0.32.13",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "^0.21.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
