--- a/LightLog_BE/.gitignore
+++ b/LightLog_BE/.gitignore
@@ -35,3 +35,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Application Secrets ###
+application-secret.properties
+src/main/resources/application-secret.properties
