--- a/LightLog_FE/package.json
+++ b/LightLog_FE/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "axios": "^1.13.2",
     "expo": "^54.0.25",
     "expo-dev-client": "~6.0.18",
