--- a/LightLog_FE/package.json
+++ b/LightLog_FE/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "^8.5.1",
     "axios": "^1.13.2",
     "expo": "^54.0.25",
+    "expo-av": "^16.0.8",
     "expo-dev-client": "~6.0.18",
     "expo-notifications": "~0.28.19",
     "expo-status-bar": "~3.0.8",
@@ -21,6 +22,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-permissions": "^5.4.4",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "zustand": "^5.0.8"
